REGRESSION(r88757): input[type=range] renders incorrectly in RTL context. https://bugs.webkit.org/show_bug.cgi?id=64904

Reviewed by Ryosuke Niwa.

Source/WebCore:

Tests: fast/forms/input-appearance-range-rtl.html

* html/shadow/SliderThumbElement.cpp:
(WebCore::RenderSliderThumb::layout):
The thumb should be positioned based on 'right' CSS property instead of 'left.'
(WebCore::SliderThumbElement::setPositionFromPoint):
The fraction should be flipped in RTL.

LayoutTests:

* fast/forms/input-appearance-range-rtl-expected.html: Added.
* fast/forms/input-appearance-range-rtl.html: Added.
* platform/chromium/test_expectatinos.txt:

Canonical link: https://commits.webkit.org/80680@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@91460 268f45cc-cd09-0410-ab3c-d52691b4dbfc